# LibreChat

./: Notes_Visualization_and_RAG.md  Setup_Guide_Ubuntu.md  docker-compose.yml
mcp/rag_agent/: __init__.py  ask.py  main.py  pyproject.toml  rag_agent.py  server.py
mcp/rag_agent/chroma_db/: chroma.sqlite3
mcp/visualization_dashboard/: main.py  pyproject.toml  server.py
mcp/visualization_dashboard/visualize/: chart_generator.py  chart_types.py  config.py  dashboard.py  dashboard_chart_generator.py
mcp/weather/: weather.py
uploads/: historic_dummy_data.py  historic_portfolio.csv
uploads/dashboard/: allocation.html  dashboard.html  drawdown.html  performance.html  top_positions.html
